Updated fee schedule PUT API
